@@ -3,8 +3,9 @@
 Drivers:
 * LT::Multext: The sixth character of nouns is not adjform. It is probably
   reflexivity.
-* LT::Multext: The seventh character of adjectives is better characterized as
-  definiteness, although adjform is not exactly wrong.
+* LT::Multext: The seventh character of adjectives, sixth of pronouns, seventh
+  of numerals is better characterized as definiteness, although adjform is not
+  exactly wrong.
 
 
 
